--- a/src/app/notesform/notesform.component.html
+++ b/src/app/notesform/notesform.component.html
@@ -1,84 +1,123 @@
-<table class="table  table-bordered">
-    <tbody>
-        <tr>
-    <th>
-    <i class="fas fa-table"></i>
-    Notes
-    <form (ngSubmit)="onSubmit()">
-    <div class="text-leftt"> 
-    <br>
-    <button type="submit" class="btn btn-primary">Save</button>&nbsp;
-    <button (click)="onCancel()" type="button" class="btn btn-secondary">Cancel</button>
-    </div>
-<div class="row justify-content-center">
-    <div class="col-auto">
-        
-    <table class="table  table-bordered">
-    <thead class="thead-info">
-    
-    <tr class="bg-primary text-light" >
-    <th>Notes Information</th>
-    </tr>
-    </thead>
-    <tbody>
+<table class="table table-bordered">
+  <tbody>
     <tr>
-    <td>
-    <div class="container-fluid">
-       
-          <div class="form-group text-info">
-    <div class="row">
-    <label class="col-sm-6 ">Note Text:</label>
-                            <div class="col-sm-6"><input type="text" select class="form-control" id="notetext" required [(ngModel)]="notes.notetext" name="notetext"></div>
-              </div>
-    <br>
-    <div class="row">
-    <label class="col-sm-6">Note Type:</label>
-                            <div class="col-sm-6"><select class="form-control" id="notetype" required [(ngModel)]="notes.notetype" name="notetype" >
-                            <option selected>--Select--</option>
-                            <option>General Note</option> 
-    <option>Converted</option> 
-    <option>Foreclosure Activities</option> 
-    <option>Bankruptcy</option> 
-    <option>Mortage Relese Activity</option> 
-    <option>Payment Note</option> 
-    <option>Warning Note</option> 
-    <option>Violation Note</option> 
-    <option>Closing Docs</option> 
-    <option>Origination Reviews</option> 
-    <option>Congressional</option> 
-    <option>HECM Complaint</option> 
-    <option>11</option> 
-    <option>AA</option> 
-    <option>BK</option> 
-    <option>CS</option> 
-    <option>CV</option> 
-    <option>FR</option> 
-    <option>MS</option> 
-                            </select> 
+      <th>
+        <i class="fas fa-table"></i>
+        Notes
+        <form (ngSubmit)="onSubmit(f)" #f="ngForm">
+          <div class="text-leftt">
+            <br />
+            <button type="submit" class="btn btn-primary">Save</button>&nbsp;
+            <button
+              (click)="onCancel()"
+              type="button"
+              class="btn btn-secondary"
+            >
+              Cancel
+            </button>
+          </div>
+          <div class="row justify-content-center">
+            <div class="col-auto">
+              <table class="table table-bordered">
+                <thead class="thead-info">
+                  <tr class="bg-primary text-light">
+                    <th>Notes Information</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>
+                      <div class="container-fluid">
+                        <div class="form-group text-info">
+                          <div class="row">
+                            <label class="col-sm-6">Note Text:</label>
+                            <div class="col-sm-6">
+                              <input
+                                type="text"
+                                select
+                                class="form-control"
+                                id="notetext"
+                                required
+                                ngModel
+                                name="notetext"
+                              />
                             </div>
-    </div>
-    <br>
-    <div class="row">
-    <label class="col-sm-6 ">Note Operation:</label>
-                            <div class="col-sm-6"><input type="text" select class="form-control" id="noteoperation" required [(ngModel)]="notes.noteoperation" name="noteoperation"  ></div>
-              </div>
-    
-       <br>
-    <div class="row">
-         <label class="col-sm-6 ">Note Importance:</label>
-                         <div class="col-sm-4"><input type="checkbox" class="form-control" value="" id="noteimportance" required [(ngModel)]="notes.noteimportance" name="noteimportance"> </div>  
-        </div>
-    </div>
-   
-        </div>   
-    </td>
+                          </div>
+                          <br />
+                          <div class="row">
+                            <label class="col-sm-6">Note Type:</label>
+                            <div class="col-sm-6">
+                              <select
+                                class="form-control"
+                                id="notetype"
+                                required
+                                ngModel
+                                name="notetype"
+                              >
+                                <option selected>--Select--</option>
+                                <option>General Note</option>
+                                <option>Converted</option>
+                                <option>Foreclosure Activities</option>
+                                <option>Bankruptcy</option>
+                                <option>Mortage Relese Activity</option>
+                                <option>Payment Note</option>
+                                <option>Warning Note</option>
+                                <option>Violation Note</option>
+                                <option>Closing Docs</option>
+                                <option>Origination Reviews</option>
+                                <option>Congressional</option>
+                                <option>HECM Complaint</option>
+                                <option>11</option>
+                                <option>AA</option>
+                                <option>BK</option>
+                                <option>CS</option>
+                                <option>CV</option>
+                                <option>FR</option>
+                                <option>MS</option>
+                              </select>
+                            </div>
+                          </div>
+                          <br />
+                          <div class="row">
+                            <label class="col-sm-6">Note Operation:</label>
+                            <div class="col-sm-6">
+                              <input
+                                type="text"
+                                select
+                                class="form-control"
+                                id="noteoperation"
+                                required
+                                ngModel
+                                name="noteoperation"
+                              />
+                            </div>
+                          </div>
+
+                          <br />
+                          <div class="row">
+                            <label class="col-sm-6">Note Importance:</label>
+                            <div class="col-sm-4">
+                              <input
+                                type="checkbox"
+                                class="form-control"
+                                value=""
+                                id="noteimportance"
+                                required
+                                ngModel
+                                name="noteimportance"
+                              />
+                            </div>
+                          </div>
+                        </div>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </form>
+      </th>
     </tr>
-        </tbody>
-            </table>
-        </div>
-        </div>
-    </form>
-        </th>
-        </tr>
-    </tbody>
-</table>      
+  </tbody>
+</table>
