--- a/src/app/notesedit/notesedit.component.html
+++ b/src/app/notesedit/notesedit.component.html
@@ -1,16 +1,18 @@
-<h3>Edit Notes</h3>
 <table class="table table-bordered">
-  <form (ngSubmit)="onSubmit()">
-    <tbody>
-      <tr>
-        <th>
-          <i class="fas fa-table"></i>
-          Notes
-
+  <tbody>
+    <tr>
+      <th>
+        <i class="fas fa-table"></i>
+        Notes
+        <form (ngSubmit)="onSubmit(f)" #f="ngForm">
           <div class="text-leftt">
             <br />
             <button type="submit" class="btn btn-primary">Save</button>&nbsp;
-            <button click="onCancel()" type="button" class="btn btn-secondary">
+            <button
+              (click)="onCancel()"
+              type="button"
+              class="btn btn-secondary"
+            >
               Cancel
             </button>
           </div>
@@ -36,7 +38,7 @@
                                 class="form-control"
                                 id="notetext"
                                 required
-                                [(ngModel)]="notes.notetext"
+                                ngModel
                                 name="notetext"
                               />
                             </div>
@@ -49,7 +51,7 @@
                                 class="form-control"
                                 id="notetype"
                                 required
-                                [(ngModel)]="notes.notetype"
+                                ngModel
                                 name="notetype"
                               >
                                 <option selected>--Select--</option>
@@ -85,7 +87,7 @@
                                 class="form-control"
                                 id="noteoperation"
                                 required
-                                [(ngModel)]="notes.noteoperation"
+                                ngModel
                                 name="noteoperation"
                               />
                             </div>
@@ -101,7 +103,7 @@
                                 value=""
                                 id="noteimportance"
                                 required
-                                [(ngModel)]="notes.noteimportance"
+                                ngModel
                                 name="noteimportance"
                               />
                             </div>
@@ -114,8 +116,8 @@
               </table>
             </div>
           </div>
-        </th>
-      </tr>
-    </tbody>
-  </form>
+        </form>
+      </th>
+    </tr>
+  </tbody>
 </table>
